--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
@@ -163,8 +163,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निधानगर्भामिव सागराम्बरां शमीमिवाभ्यन्तरलीनपावकाम् ।  
-नदीमिवान्तःसलिलां सरस्वतीं नृपः ससत्त्वां महिषीममन्यत ॥ ९॥
+निधान+++(=निधि)+++-गर्भाम् +++(भूमिम्)+++ इव सागराम्बरां,  
+शमीम् इवाभ्यन्तर-लीन-पावकाम् ।  
+नदीम् इवान्तः+++(→गुप्त)+++-सलिलां सरस्वतीं  
+नृपः **स-सत्त्वां** महिषीम् **अमन्यत** ॥ ९॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -174,7 +176,20 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-निधानेति॥ नृपः ससत्त्वामापन्नसत्त्वाम्। गर्भिणीमित्यर्थः। 'आपन्नसत्त्वा स्याद्गुर्विण्यन्तर्वत्नी च गर्भिणी' इत्यमरः। महिषीम्। निधानं निधिर्गर्भे यस्यास्तां सागराम्बरां समुद्रवसनाम्। भूमिमिवेत्यर्थः;'भूतधात्री रत्नगर्भा विपुला सागराम्बरा' इति कोशः। अभ्यन्तरे लीनः पावको यस्यास्तां शमीमिव। शमीतरौ वह्निरस्तीत्यत्र लिङ्गं-शमीगर्भादग्निं मथ्नन्तीति। अन्तः सलिलामन्तर्गतजलां सरस्वतीं नदीमिव। अमन्यत। एतेन गर्भस्य भाग्यवत्त्व-तेजस्वित्व-पावनत्वानि विवक्षितानि ॥ 9 ॥
+निधानेति॥ नृपः ससत्त्वामापन्नसत्त्वाम्। गर्भिणीमित्यर्थः। 'आपन्नसत्त्वा स्याद्गुर्विण्यन्तर्वत्नी च गर्भिणी' इत्यमरः। महिषीम्।  
+**निधानं** निधिर् गर्भे यस्यास् तां **सागराम्बरां** समुद्रवसनाम्। 
+
+भूमिमिवेत्यर्थः;
+
+> 'भूतधात्री रत्नगर्भा  
+> विपुला सागराम्बरा' 
+
+इति कोशः।  
+
+**अभ्यन्तरे लीनः पावको** यस्यास्तां **शमीम् इव।**  
+शमीतरौ वह्निरस्तीत्यत्र लिङ्गं-शमीगर्भादग्निं मथ्नन्तीति।  
+**अन्तः सलिलाम्** अन्तर्गतजलां सरस्वतीं नदीमिव। **अमन्यत**।  
+एतेन गर्भस्य भाग्यवत्त्व-तेजस्वित्व-पावनत्वानि विवक्षितानि ॥ 9 ॥
 </details>
 </div>
 
@@ -185,8 +200,10 @@ unicode_script = "devanagari"
 </details>
 <details><summary>मूलम्</summary>
 
-प्रियानुरागस्य मनः समुन्नतेर्भुजार्जितानां च दिगन्तसंपदाम् ।  
-यथाक्रमं पुंसवनादिकाः क्रिया धृतेश्च धीरः सदृशीर्व्यधत्त सः ॥ १०॥
+प्रियाऽनुरागस्य मनः-समुन्नतेर्  
+भुजार्जितानां च दिगन्त-संपदाम् ।  
+यथा-क्रमं पुंसवनादिकाः क्रिया  
+धृतेश्च धीरः सदृशीर् **व्यधत्त** सः ॥ १०॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/10.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
