--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -1,21 +1,22 @@
 +++
-title = "०५"
+title = "०५ तपःफलोदयः"
 
 +++
 
-.  
-
 पञ्चमः सर्गः  
 
+## तपो-निश्चयः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तथा समक्षं दहता मनोभवं पिनाकिना भग्नमनोरथा सतीं ।  
-निनिन्द रूपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
+तथा समक्षं दहता मनो-भवं 
+पिनाकिना भग्न-मनो-रथा सती ।  
+**निनिन्द** रूपं हृदयेन पार्वती  
+प्रियेषु सौभाग्य-फला हि चारुता ॥ 5.1 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तथा समक्षं दहता मनोभवं पिनाकिना भग्नमनोरथा सतीं ।  
+तथा समक्षं दहता मनोभवं पिनाकिना भग्नमनोरथा सती ।  
 निनिन्द रूपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
 </details>
 
@@ -31,13 +32,15 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इयेष सा कर्तुमबन्ध्यरूपतां समाधिमास्थाय तपोभिरात्मनः ।  
-अवाप्यते वा कथमन्यथा द्वयं तथाविधं प्रेम पतिश्च तादृशः ॥ 5.2 ॥  
+**इयेष** सा **कर्तुम्** अवन्ध्य-रूपतां  
+समाधिम् **आस्थाय** तपोभिर् आत्मनः ।  
+**अवाप्यते** वा कथम् अन्यथा द्वयं  
+तथा-विधं प्रेम, पतिश् च तादृशः ॥ 5.2 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-इयेष सा कर्तुमबन्ध्यरूपतां समाधिमास्थाय तपोभिरात्मनः ।  
+इयेष सा कर्तुमवन्ध्यरूपतां समाधिमास्थाय तपोभिरात्मनः ।  
 अवाप्यते वा कथमन्यथा द्वयं तथाविधं प्रेम पतिश्च तादृशः ॥ 5.2 ॥  
 </details>
 
@@ -51,10 +54,13 @@ title = "०५"
 इयेषेति ॥ सा पार्वती समाधिमेकाग्रतामास्थायावलम्ब्यतपोभिर्वक्ष्यमाणनियमैः करणभूतैरात्मनः स्वस्याबन्ध्यरूपतां सफलसौन्दर्यं कर्तुमियेषेच्छति स्म । तपसा शिवं वशीकर्तुमुद्युक्तेत्यर्थः । अन्यथा ततोऽन्यप्रकारेण कथं वा तद्‌द्वयमवाप्यते । किं तद्द्वयम् ? तथाभूता विधा प्राकारो यस्य तत्तथाविधं प्रेम स्नेहः येनार्धाङ्गहरा हरस्य भवेदिति भावः । तादृशः पतिश्च । यो मृत्युंजय इति भावः । द्वयमेव खलु क्त्रीणामपेक्षितं यद्भर्तृवाल्लभ्यं जीवद्भर्तृकत्वं चेति । तच्च तपश्चर्यैकसाध्यमिति निश्चिकायेत्यर्थः । अत्र मनुः- 'यद् दुष्करं यद् दुरापं यद् दुर्गं यच्च दुस्तरम् । तत्सर्व तपसा प्राप्यं तपो हि दुरतिक्रमम् ॥' इति ॥ 5.2 ॥
 </details>
 
+### निषेध-प्रयासः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निशम्य चैनां तपसे कृतोद्यमां सुतां गिरीशप्रतिसक्तमानसाम् ।  
-उवाच मेना परिरभ्य वक्षसा निवारयन्ती महतो मुनिव्रतात् ॥ 5.3 ॥  
+निशम्य चैनां तपसे कृतोद्यमां  
+सुतां गिरीश-प्रतिसक्त-मानसाम् ।  
+**उवाच** मेना परिरभ्य वक्षसा  
+निवारयन्ती महतो मुनि-व्रतात् ॥ 5.3 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -71,20 +77,23 @@ title = "०५"
 <details><summary>मल्लिनाथः</summary>
 
 निशम्येति ॥ मेना मेनका च गिरीशप्रतिसक्तमानसां हरासक्तचित्तां तपसे तपश्चरणाय कृतोद्यमां कृतोद्योगां सुतां निशम्य श्रुत्वैनां पार्वतीं वक्षसा परिरभ्यालिङ्ग्य महतो मुनिव्रतात्तपसो निवारयन्त्युवाच । मुनिव्रतादित्यत्र यद्यपि मुनिव्रतस्य मेनकाया अनीप्सितत्वात् 'वारणार्थानामीप्सितः इति नापादानत्वं तथापि कृतेद्यमामिति मानसप्रवेशोक्तत्वात् "ध्रुवमपायेऽपादानम्' इत्यपादानत्वमेव स्यात् । यथाह भाष्यकारः- 'यच्च मिथ्या संप्राप्य निवर्तते तच्च ध्रुवमपायेऽपादानमिति प्रसिद्धम्' इति ॥ 5.3 ॥
+
+सामान्य-निषेधम् उक्त्वा विशेषनिषेधमाह-  
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सामान्यनिषेधमुक्त्वा विशेषनिषेधमाह-  
-मनीषिताः सन्ति गृहेषु दैवतास्तपः क्व वत्से क्व च तावकं वपुः ।  
-पदं सहेत भ्रमरस्य पेलवं शिरीषपुष्पं न पुनः पतत्त्रिणः ॥ 5.4 ॥  
+मनीषिताः सन्ति गृहेषु दैवतास्  
+तपः क्व वत्से क्व च तावकं वपुः ।  
+पदं **सहेत** भ्रमरस्य पेलवं+++(=मृदुलं)+++  
+शिरीष-पुष्पं न पुनः पतत्त्रिणः ॥ 5.4 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सामान्यनिषेधमुक्त्वा विशेषनिषेधमाह-  
 मनीषिताः सन्ति गृहेषु दैवतास्तपः क्व वत्से क्व च तावकं वपुः ।  
-पदं सहेत भ्रमरस्य पेलवं शिरीषपुष्पं न पुनः पतत्त्रिणः ॥ 5.4 ॥  
+पदं सहेत भ्रमरस्य पेलवं  
+शिरीष-पुष्पं न पुनः पतत्त्रिणः ॥ 5.4 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -99,14 +108,16 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इति ध्रुवेच्छामनुशासती सुतां शशाक मेना न नियन्तुमुद्यमात् ।  
-क इप्सितार्थस्थिरनिश्चयं मनः पयश्च निभ्राभिमुखं प्रतीपयेत् ॥ 5.5 ॥  
+इति ध्रुवेच्छाम् **अनुशासती** सुतां  
+**शशाक** मेना **न **नियन्तुम्** उद्यमात् ।  
+क इप्सितार्थ-स्थिर-निश्चयं मनः  
+पयश् च निम्नाऽभिमुखं **प्रतीपयेत्** ॥ 5.5 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
 इति ध्रुवेच्छामनुशासती सुतां शशाक मेना न नियन्तुमुद्यमात् ।  
-क इप्सितार्थस्थिरनिश्चयं मनः पयश्च निभ्राभिमुखं प्रतीपयेत् ॥ 5.5 ॥  
+क इप्सितार्थस्थिरनिश्चयं मनः पयश्च निम्नाऽभिमुखं प्रतीपयेत् ॥ 5.5 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -121,14 +132,16 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कदाचिदासन्नसखीमुखेन मनोरथज्ञं पितरं मनस्विनी ।  
-अयाचितारण्यनिवासमात्मनः फलोदयान्ताय तपःसमाधये ॥ 5.6 ॥      
+कदाचिद् आसन्न-सखी-मुखेन  
+मनो-रथ-ज्ञं पितरं मनस्विनी ।  
+**अयाचतारण्य-निवासम्** आत्मनः  
+फलोदयान्ताय तपः-समाधये ॥ 5.6 ॥      
 </details>
 
 <details><summary>मूलम्</summary>
 
 कदाचिदासन्नसखीमुखेन मनोरथज्ञं पितरं मनस्विनी ।  
-अयाचितारण्यनिवासमात्मनः फलोदयान्ताय तपःसमाधये ॥ 5.6 ॥      
+अयाचतारण्यनिवासमात्मनः फलोदयान्ताय तपःसमाधये ॥ 5.6 ॥      
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -141,10 +154,13 @@ title = "०५"
 कदाचिदिति ॥ अथ कदाचिन्मन्स्विनी स्थिरचित्ता सा पार्वती मनोरथज्ञमभिलाषाभिज्ञं पितरं हिमवन्तमासन्नसख्याप्तखी सैव मुखमुपायः । 'मुखं निःसरणे वक्त्रे प्रारम्भोपाययोरपि' इति विश्वः ।' तेन फलोदयः फलोत्पत्तिरन्तोऽवधिर्यस्य तस्मै तपःसमाधये तपोनियमार्थमात्मनःस्वस्यारण्यनिवासं वनवासमयाचत । 'दुह्याच्-' इत्यादिना द्विकर्मकत्वम् ॥ 5.6 ॥
 </details>
 
+## आरम्भः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथानुरुपाभिनिवेशतोषिणा कृताभ्यनुज्ञा गुरुणा गरीयसा ।  
-प्रजासु पश्चात्प्रथितं तदाख्यया जगाम गौरी शिखरं शिखण्डिमत् ॥ 5.7 ॥  
+अथानुरुपाभिनिवेश-तोषिणा  
+**कृता ऽभ्यनुज्ञा** गुरुणा गरीयसा ।  
+प्रजासु पश्चात्-प्रथितं +++(गौरी-शिखरम् इति)+++ तद्-आख्यया  
+**जगाम** गौरी शिखरं शिखण्डिमत् +++(न तु व्याल-मृगवत्)+++ ॥ 5.7 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -160,13 +176,15 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति ॥ अथ गौर्यनुरुपेण योग्येनाभिनिवेशेनाग्रहेण तुष्यतीति तथोक्तेन गरीयसा पूज्यतमेन गुरुणा पित्रा कृताभ्यनुज्ञा तपः कुर्विति कृतानुमतिः सती पश्चात्तपःसिद्ध्यतरकालं प्रजासु जनेषु तदाख्यया तस्या गौर्याः संज्ञया प्रथितम् । गौरीशिखरमिति प्रसिद्धमित्यर्थः । शिखण्डिमत् । न तु र्हिस्त्रप्राणिप्रचुरमिति भावः । शिखरं श्रृङ्गं जगाम ययौ ॥ 5.7 ॥
+अथेति ॥ अथ गौर्यनुरुपेण योग्येनाभिनिवेशेनाग्रहेण तुष्यतीति तथोक्तेन गरीयसा पूज्यतमेन गुरुणा पित्रा कृताभ्यनुज्ञा तपः कुर्विति कृतानुमतिः सती पश्चात्तपःसिद्ध्यतरकालं प्रजासु जनेषु तदाख्यया तस्या गौर्याः संज्ञया प्रथितम् । गौरीशिखरमिति प्रसिद्धमित्यर्थः । शिखण्डिमत् । न तु हिंस्र-प्राणिप्रचुरमिति भावः । शिखरं श्रृङ्गं जगाम ययौ ॥ 5.7 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विमुच्य सा हारमहार्यनिश्चया विलोलयष्टिप्रविलुप्तचन्दनम् ।  
-बबन्ध बालारुणबभ्रु वल्कलं पयोधरोत्सेधविशोर्णसंहति ॥ 5.8 ॥  
+**विमुच्य** सा हारम् अ-हार्य-निश्चया  
+विलोल-यष्टि-प्रविलुप्त-+++(स्तनान्त-)+++चन्दनम् +++(→हारम्)+++।  
+**बबन्ध** बालारुण-बभ्रु वल्कलं   
+पयो-धरोत्सेध-विशोर्ण-+++(अवययव-)+++संहति ॥ 5.8 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -182,13 +200,15 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-विमुच्येति ॥ अहार्यनिश्चया अनिवार्यनिश्चया सा गौरी विलालाभिश्चलाभिर्यष्टिभिः प्रतिसरैः प्रविलुप्तं प्रमुष्टं चन्दनं स्तनान्तगतं येन तं तथोक्तं हारं मुक्तावलीं विमुच्य विहाय बालारुणबभ्रु बालार्कपिङ्गलं पयोधरयोः स्तनयोरुत्सेघेनोच्छ्रायेण विशीर्मा विघटितां संहतिरवयवप्तंश्लेषो यस्य तत्तथोक्तं वल्कलं कण्ठलम्बि स्तनोत्तरीयभर्त बबन्ध । धारयामासेन्यर्थः ॥ 5.8 ॥
+विमुच्येति ॥ अहार्यनिश्चया अनिवार्यनिश्चया सा गौरी विलोलाभिश् चलाभिर् यष्टिभिः प्रतिसरैः प्रविलुप्तं प्रमुष्टं चन्दनं स्तनान्तगतं येन तं तथोक्तं हारं मुक्तावलीं विमुच्य विहाय बालारुणबभ्रु बालार्कपिङ्गलं पयोधरयोः स्तनयोर् उत्सेधेनोच्छ्रायेण विशीर्णा विघटितां संहतिर् अवयवसंश्लेषो यस्य तत्तथोक्तं वल्कलं कण्ठलम्बि स्तनोत्तरीयभर्त बबन्ध । धारयामासेन्यर्थः ॥ 5.8 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यथा प्रसिद्धैर्मधुरं शिरोरुहैर्जटाभिरप्येवमभूत्तदाननम् ।  
-न षट्पदश्रेणिभिरेव पङ्कजं सशैवलासङ्गमपि प्रकाशते ॥ 5.9 ॥  
+यथा प्रसिद्धैर् मधुरं शिरो-रुहैर्  
+जटाभिर् अप्य् एवम् **अभूत्** तद्-आननम् ।  
+न षट्-पद-श्रेणिभिर् एव पङ्कजं  
+स-शैवलासङ्गम् अपि **प्रकाशते** ॥ 5.9 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -209,14 +229,16 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रतिक्षणं सा कृतरोमविक्रिया व्रताय मौञ्जीं त्रिगुणां वभार याम् ।  
-अकारि तत्पूर्वनिबद्धया तया सहागमस्या रसनागुणास्पदम् ॥ 5.10 ॥  
+प्रतिक्षणं सा कृत-रोम-विक्रिया,  
+व्रताय मौञ्जीं त्रिगुणां **बभार** याम् ।  
+**अकारि** तत्-पूर्व-निबद्धया तया  
+स-रागम् अस्या रसना+++(=रशना)+++-गुणास्पदम् +++(कटिक्षेत्रम्)+++ ॥ 5.10 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-प्रतिक्षणं सा कृतरोमविक्रिया व्रताय मौञ्जीं त्रिगुणां वभार याम् ।  
-अकारि तत्पूर्वनिबद्धया तया सहागमस्या रसनागुणास्पदम् ॥ 5.10 ॥  
+प्रतिक्षणं सा कृतरोमविक्रिया व्रताय मौञ्जीं त्रिगुणां बभार याम् ।  
+अकारि तत्पूर्वनिबद्धया तया सरागमस्या रसनागुणास्पदम् ॥ 5.10 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -226,13 +248,16 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-प्रतीति । सा देवी प्रतिक्षणं क्षणे क्षणे कृतरोमविक्रियां पारुष्याकृतरोमाञ्चां त्रिगुणां त्रिरावृतां यां मौञ्जीं मुञ्जमयीं मेखलां व्रताय तपसे बभार । तदेव पूर्वं प्रथमं यस्य तत्पूर्वं यथा तथा निबद्धया तया मौञ्ज्यास्या देव्या रसनागुणस्यास्पदं स्थानं जघनम् । सह रागेण सरागं सरोहितमकारि कृतम् । सौकुमार्यातिशयादिति भावः ॥ 5.10 ॥
+प्रतीति । **सा** देवी **प्रतिक्षणं** क्षणे क्षणे **कृतरोमविक्रियां** पारुष्या(त्??)कृतरोमाञ्चां **त्रिगुणां** त्रिरावृतां यां **मौञ्जीं** मुञ्जमयीं मेखलां **व्रताय** तपसे **बभार** ।  
+तदेव **पूर्वं** प्रथमं यस्य तत्पूर्वं यथा तथा **निबद्धया** तया मौञ्ज्यास्या देव्या **रसनागुणस्यास्पदं** स्थानं जघनम् । सह रागेण **सरागं** सरोहितम् **अकारि** कृतम् । सौकुमार्यातिशयादिति भावः ॥ 5.10 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विसृष्टरागादधरान्निवर्तितः स्तनाङ्गरागारुणिताच्च कन्दुकात् ।  
-कुशाङ्कुरादानपरिक्षताङ्गुलिः कृतोऽक्षसूत्रप्रणयी तया करः ॥ 5.11 ॥  
+विसृष्ट-रागाद् अधरान् **निवर्तितः**,  
+स्तनाङ्ग-रागारुणिताच् च कन्दुकात् ।  
+कुशाङ्कुरादान-परिक्षताङ्गुलिः  
+**कृतो ऽक्ष-सूत्र-प्रणयी** तया करः ॥ 5.11 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -248,7 +273,10 @@ title = "०५"
 
 <details><summary>मल्लिनाथः</summary>
 
-विसृष्टेति ॥ तया देव्या विसृष्टरागात्त्यक्तलाक्षारसरञ्जनादधरादधरोष्ठान्निवर्तितः । 'निसृष्टरागात्' इति पाठे नितरां त्यक्तलाक्षारागात् । रागत्यगेन निष्प्रयोजनत्वादिति भावः । तथा स्तनाङ्गरागेणारुणितादरुणीकृतात् । पतनसमये तस्य स्तनयोरुपरोधादिति भावः । कन्दुकाच्च निवर्तितः । कुशाङ्कुराणामादानेन लवनेन परिक्षता व्रणिता अङ्गुलयो यस्य स तथोक्तः करः पाणिरक्षसूत्रप्रणय्यक्षमालासहचरःकृतः ॥5.11 ॥
+विसृष्टेति ॥ तया देव्या विसृष्टरागात् त्यक्त-लाक्षा-रस-रञ्जनाद् अधराद् अधरोष्ठान् **निवर्तितः** । 'निसृष्टरागात्' इति पाठे - नितरां त्यक्त-लाक्षा-रागात् ।  
+रागत्यागेन निष्प्रयोजनत्वादिति भावः ।  
+
+तथा स्तनाङ्गरागेणारुणिताद् अरुणीकृतात् । पतनसमये तस्य स्तनयोर् उपरोधाद् इति भावः । कन्दुकाच् च निवर्तितः । कुशाङ्कुराणाम् आदानेन लवनेन परिक्षता व्रणिता अङ्गुलयो यस्य स तथोक्तः करः पाणिर् अक्षसूत्रप्रणय्य् अक्षमालासहचरः कृतः ॥5.11 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
