--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -252,13 +252,27 @@ title = "०५ तपःफलोदयः"
 तदेव **पूर्वं** प्रथमं यस्य तत्पूर्वं यथा तथा **निबद्धया** तया मौञ्ज्यास्या देव्या **रसनागुणस्यास्पदं** स्थानं जघनम् । सह रागेण **सरागं** सरोहितम् **अकारि** कृतम् । सौकुमार्यातिशयादिति भावः ॥ 5.10 ॥
 </details>
 
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
+
+कुशादानम् अक्षमालाधारणं चाह- 
+</details>
+
+
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-विसृष्ट-रागाद् अधरान् **निवर्तितः**,  
-स्तनाङ्ग-रागारुणिताच् च कन्दुकात् ।  
+विसृष्ट-रागाद् अधरान् **निवर्तितः** +++(- न खल्व् अधुना रागस्थापनम्)+++,  
+स्तनाङ्ग-रागारुणिताच् च, कन्दुकात् ।  
 कुशाङ्कुरादान-परिक्षताङ्गुलिः  
 **कृतो ऽक्ष-सूत्र-प्रणयी** तया करः ॥ 5.11 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(11.) By her hand, turned away from (no longer employed in painting) the nether lip from which the red colour bad disappeared, and from the ball becoming red by the anguent of the breasts, and with the fingers pricked by plucking the tender blades of Kus'a grass, was made the friend of the rosary of Akshas. 
+</details>
+
+
 
 <details><summary>मूलम्</summary>
 
