--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/TIkAH/kAle/02_TRANSLATION/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/TIkAH/kAle/02_TRANSLATION/02.md
@@ -10,7 +10,7 @@ title = "०२"
 (5.) O uuborn one, the universe, composed of things that move and that do not move, has sprung from the ever prolific seed which was cast by thee in the waters; hence art thou glorified as its source. 
 (6.) Manifesting thy might by the three forms (lit. three states characterised by the three qualities), thou alone hast come to be the cause of the creation, the protection and the retraction ( of the universe). 
 (7.) Male and female are the separate manifestations of thy own self, (thus) split up through the desire of creating; and these are declared as the parents of the creation that sprang into existence. 
-(8.) The waking and slumbering of thee, who hast sepa- rated thy day and night by the measure of thy own time, are (represent the period of) the creation and destruction of all things. 
+(8.) The waking and slumbering of thee, who hast separated thy day and night by the measure of thy own time, are (represent the period of) the creation and destruction of all things. 
 (9.) Thyself without a source, thou art the source of the universe; thyself endless, thou art the end of the universe; without beginning, thou art the beginning of the universe; and thyself lordless, thou art the lord of the universe!! 
 (10.) Thou knowest thyself in thyself, thou createst thyself by thyself and thou art absorbed in thyself by thy own mighty self.11. 
 (9) 
@@ -22,7 +22,7 @@ Thou art fluid and hard on account of the close contact of the particles (adhesi
 (16.) Having heard from them these praises, thus uttered, truthful and going (pleasing) to the heart, the Creator, inclined to show favour, answered the gods thus : 
 (17.) Of that primeval bard, the fourfold (2.e. having a fourfold excellence) flow of words (speech) being uttered from the four mouths, was successful (or had its object gained). 
 (18.) Welcome to you, O gods of mighty valour, who, having held your (respective) high posts by your might, have come here in a body and who have pole-like (long) arms (i. e. reaching upto the knee). 
-(19.) Why is it that your faces do not show their wont- ed glow like stars with their gleam dimmed by a mist? 
+(19.) Why is it that your faces do not show their wonted glow like stars with their gleam dimmed by a mist? 
 (20.) This thunderbolt of the destroyer of Vritra, not displaying its variegated splendour (rain-bow) on account of the loss of its radiance, appears to have its edges blunted. 21. The noose in the hand of Varuna, Irresistible to the enemy, is reduced to the helplessness of a serpent, whose prowess is repressed by a spell. 
 (10) 
 (22.) The arm of Kubera, from which the mace is cast off, and which, therefore, appearing like a tree with its branches broken, hints, as it were, at a defeat, that has been like a dart in the heart (rankling in his mind). 
@@ -32,19 +32,19 @@ Thou art fluid and hard on account of the close contact of the particles (adhesi
 (26.) The heads of the Rudras, with their crescents hanging from the knots of matted hair, bent low (through shame of defeat) tell of the quelling of their deep gutteral sounds (their weapons). 
 (27.) Have you, who had already gained position (established your pre-eminence), been thrown down from it by 'your more powerful enemies, as general rules are overthrown (set aside) by special ones (exceptions)? 
 (28.) Say then, my children, what crave you, coming here together? With me rests the creation of the world, with you its protection. 
-(29.) Then Vàsava urged the preceptor (of the gods) with (a motion of) his thousand eyes, that appeared beauti- ful like a bed of lotuses shaken by a gentle wind. 
-(30.) He, the twofold eye of Hari, greater (more ser- viceable to him) than his one thousand eyes-he, Vâchas- pati (the lord of speech) spoke to him, the lotus-throned one (Brahmá), with hands folded (in supplication). 
+(29.) Then Vàsava urged the preceptor (of the gods) with (a motion of) his thousand eyes, that appeared beautiful like a bed of lotuses shaken by a gentle wind. 
+(30.) He, the twofold eye of Hari, greater (more serviceable to him) than his one thousand eyes-he, Vâchaspati (the lord of speech) spoke to him, the lotus-throned one (Brahmá), with hands folded (in supplication). 
 (31.) O Lord, what you said is so: our high position is snatched away from us by our foes. O mighty One, how should you not know it when your soul pervades each and every creature! 
 (32.) A mighty demon uamed Ta'raka, grown insolent by a boon obtained from you, has risen to torment the world, like a comet. 
 ( 11 ) 
-(33.) To his town the Sun sends his rays in such num- bers only as will suffice to awaken (cause to bloom) the lotuses in his pleasure-lakes. (He is afraid of shining in all his glory.) 
+(33.) To his town the Sun sends his rays in such numbers only as will suffice to awaken (cause to bloom) the lotuses in his pleasure-lakes. (He is afraid of shining in all his glory.) 
 (34.) On him the Moon waits with all his digits at all times (in both the halfs); only he keeps back the digit that forms the crest-gem of S'iva. 
 (35.) The Wind, with his motion in his garden stopped through fear of (punishment for) stealing (bearing) away flowers, does not blow near him with greater force than is produced by a fan. 
-(36.) And the Seasons, ever diligent in providing a stock of flowers, wait upon him, as if they were (nothing more than) his gardeners, giving up for the time a succes- sion of service. 
+(36.) And the Seasons, ever diligent in providing a stock of flowers, wait upon him, as if they were (nothing more than) his gardeners, giving up for the time a succession of service. 
 (37.) The Lord of rivers (the sea) anxiously awaits the developing of precious stones, fit to be offered as presents to him, in the bosom of water. 
 (38.) The serpents, with Vàsuki at their head, with their blazing jewel-lustres, wait upon him at night, serving as fixed lamps. 
-(39.) Even Indra, desirous of securing favour done by him, tries again and again to win him over with the preci- ous flowers of the desire-granting trees (Kalpadrumas) sent by massengers. 
-(40.) Though served in this way, he harrasses the three worlds. A wicked person can be put down only by a reta- liation of injury and not by an act of kindness. 
+(39.) Even Indra, desirous of securing favour done by him, tries again and again to win him over with the precious flowers of the desire-granting trees (Kalpadrumas) sent by massengers. 
+(40.) Though served in this way, he harrasses the three worlds. A wicked person can be put down only by a retaliation of injury and not by an act of kindness. 
 (41.) By him are the trees of the Nandana grove, the leaves of which were tenderly plucked by the wives of the Immortals, made to experience cuttings and fallings. 
 (42.) When asleep, he is fanned by the captive heavenly damsels with chauries. showering the spray of tears, and raising wind light like breathing. 
 (43.) He has built pleasure-mountains in his residences having rooted up peaks of Meru, (once) struck by the hoofs of the Sun's coursers. 
@@ -52,12 +52,12 @@ Thou art fluid and hard on account of the close contact of the particles (adhesi
 ( 12 ) 
 (i. e. without its golden lotuses), while his pleasure-lakes have become the abode of the harvest of golden lotuses. 
 (45.) 
-The love of seeing different worlds is no more en- tertained by the gods, as the path of the aerical cars has become desolate through fear of being attacked by him. 
+The love of seeing different worlds is no more entertained by the gods, as the path of the aerical cars has become desolate through fear of being attacked by him. 
 (46.) He, versed in magic arts, snatches away from the mouth of fire, the oblation offered by the sacrificers (in due form) in sacrifices when instituted, while we look on ( helplessly). 
-(47.) He has borne away the well-known Uchchais'ra- vas, the jewel of horses, who was, as it were, the long acquired glory of Indra in a bodily form. 
-(48.) All our efforts against the wicked wretch are turn- ed to naught, as herbs of powerful healing virtue, against a joint distemper of the three humours malignly disturbed. 
+(47.) He has borne away the well-known Uchchais'ravas, the jewel of horses, who was, as it were, the long acquired glory of Indra in a bodily form. 
+(48.) All our efforts against the wicked wretch are turned to naught, as herbs of powerful healing virtue, against a joint distemper of the three humours malignly disturbed. 
 (49.) The discus of Harí, whereon rested our hope of success, offered itself, as it were, like a gold ornament round his deck, with a stream of lustre (only) flashing forth from it as it clashed ( against his bosom ). 
-(50.) Now his elephants, who have vanquished Airà- vata, are practising butting against the clouds, such as Pushkaràvartaka and others. 
+(50.) Now his elephants, who have vanquished Airàvata, are practising butting against the clouds, such as Pushkaràvartaka and others. 
 (51.) O Almighty God, we, therefore desire to create a leader to destroy him, as those desirous of salvation wish to raise religious virtue, which cuts off the fetters of Karman. 
 (52.) Whom, the defender of the heavenly host, having placed in the foremost place, the Breaker-of-mountains (Indra) will lead back the Glory of victory, like one taken captive. 
 (53.) When this address was concluded, the Self-exis tent One uttered a speech, which far surpassed, in sweetness ( its refreshing effect), a shower falling after thunder. 
@@ -65,10 +65,10 @@ The love of seeing different worlds is no more en- tertained by the gods, as the
 (55.) The demon who acquired his glory from here, ought not to have destruction from here; it is improper to cut down even a poisonous tree when (once) nurtured by oneself. 
 ( 18 ) 
 (56.) Formerly this (viz. freedom from death at the hands of the gods) he sought (as a boon) and the same I granted him; and (thus) by a boon made his penance, capable of burning the worlds, nugatory. 
-(57.) Who but a portion of the energy of the Black- necked one (S'iva) dropped (on favourable ground) can withstand him who is warlike when ready to attack in a battle? 
+(57.) Who but a portion of the energy of the Blacknecked one (S'iva) dropped (on favourable ground) can withstand him who is warlike when ready to attack in a battle? 
 (58.) That God (S'iva) is the supreme soul (lit. highest lustre) reigning beyond the region of darkness (the quality of Tamas)-he, the extent of 
 of whose prowess cannot be accurately gauged either by me or by Vishnu. 
-(59.) So you, who are desirous of achieving your object. should try to draw away (tempt) the mind of S'iva, steadied by self-restraint (or firmly fixed on contemplation) (to- wards matrimony) by means of the beauty of Umà, like iron by a magnet. 
+(59.) So you, who are desirous of achieving your object. should try to draw away (tempt) the mind of S'iva, steadied by self-restraint (or firmly fixed on contemplation) (towards matrimony) by means of the beauty of Umà, like iron by a magnet. 
 (60.) Only these two are capable of bearing the seed of us two when deposited-Umà of S'iva and his watery form of me. 
 (61.) (Another form of) the self (son) of that S'iva, having taken up the leadership of your host, will loosen the braids of the captive heavenly damsels by the glory of his might. 
 (62.) Having addressed the gods thus the Creator of the universe vanished (from sight); and the gods, too, went back to the celestial world with what was to be done firmly settled in their minds. 
