--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/TIkAH/kAle/02_TRANSLATION/04.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/TIkAH/kAle/02_TRANSLATION/04.md
@@ -12,44 +12,44 @@ title = "०४"
 (6.) Where hast thou fled, abruptly leaving me whose (very) life depends upon thee, forgetting thy love in a moment, as does a torrent of water throwing up a lotus after breaking down a dam ? 
 (24) 
 (7.) Thou hast never done anything that would displease me, nor have I ever acted contrary to thy wishes: why is it, then, that, without cause, thou dost not present a sight of thee to thy Rati who is lamenting (thy loss)? 
-(8.) Dost thou remember, O Smara, my binding thee with the strings of my waist band whenever I was address- ed with a wrong name by thee, or my beatings of thee with lotuses used as ear ornaments, hurting thy eyes with pollen-dust dropping from them? 
+(8.) Dost thou remember, O Smara, my binding thee with the strings of my waist band whenever I was addressed with a wrong name by thee, or my beatings of thee with lotuses used as ear ornaments, hurting thy eyes with pollen-dust dropping from them? 
 (9.) I know the speech which thou wouldst utter to please me-vir." thou dwellest in my heart ". -to be false; if it was not an empty compliment, how is it that thou art without a body, and Rati uninjured? 
 (10.) 
 I will follow the path of thee who hast started on a new journey to the other world; but this world is cheated (of its pleasure) by Vidhi: the happiness of embodied beings does, indeed, depend on thee. 
 (11.) 
 Who else but thee, O beloved, can enable the sweet-hearts terrified by the thunder of the clouds, to reach the houses of their lovers, when the roads of the cities are shrouded in nocturnal darkness? 
-(12.) The intoxication of the young damsels by wine is now a mockery when thou hast ceased to exist-the intoxi- cation that makes the red eyes roll (from side to side) and the words falter at every step. 
+(12.) The intoxication of the young damsels by wine is now a mockery when thou hast ceased to exist-the intoxication that makes the red eyes roll (from side to side) and the words falter at every step. 
 (13.) O bodiless one, the Moon, knowing that the body of thee, his dear friend, has become a subject-matter of tales (only) and that his appearance (in the sky) useless, will, with great relutance, give up his thinness, even when the dark half has passed away. 
-(14.) Say by whom will the fresh blossom of the mango tree, the beautiful stem of which is reddish green and the sprouting of which is proclaimed by the notes of the male- cuckoo, be used as his arrow? 
+(14.) Say by whom will the fresh blossom of the mango tree, the beautiful stem of which is reddish green and the sprouting of which is proclaimed by the notes of the malecuckoo, be used as his arrow? 
 (15.) The swarm of bees, which was many a time used as a string for thy bow by thee, seems by its huminings, 
 ( 25 ) 
 in piteous tones, as if to-sympathise with me, whose distress 
 1s great. 
 (16.) 
-Rise again, recovering thy graceful form, and once more appoint the koel, naturally clever in sweet (pers:5- sive) talk, to the post of a messenger in love 
-(17.) There is no peace for me, O Smara, remembering as I do, our secret sportings, so familiar to us, and embra- cings, accompanied by tremour, solicited by bowing down the head. 
+Rise again, recovering thy graceful form, and once more appoint the koel, naturally clever in sweet (pers:5sive) talk, to the post of a messenger in love 
+(17.) There is no peace for me, O Smara, remembering as I do, our secret sportings, so familiar to us, and embracings, accompanied by tremour, solicited by bowing down the head. 
 (18.) 
 O thou expert in love-matters, here I bear on my person the vernal decoration of flowers arranged by thyself, but that beautiful body of thine is not to be seen. 
-19 Come then, and finish the colouring of my left loot, lit. other than the right one) before finishing the decora- tion of which, thou wast (called away by being) remembered by the cruel gods. 
+19 Come then, and finish the colouring of my left loot, lit. other than the right one) before finishing the decoration of which, thou wast (called away by being) remembered by the cruel gods. 
 (20.) As long as thou art not deceived (into loving them) in heaven, O dear, by the artful damsels of heaven, I will come to sit once more on thy lap, following thee by the way of locusts (burning myself on the funeral pyre). 
 (21.) beloved, though I follow thee, this reproach will sand-that I, Rati, bereaved of Madana, lived (hough) for a moment only. 
 (22.) How can the last decorations be done by me for thee, who hast gone to another world? For thou hast been reduced to an unthought-of condition by simultaneously (losing) both thy life and body. 
-(23.) I remember thy merry talk (lit. accompanied with Smiles) with, and casting a side-glance (lit. looking from the cornor of the eyes) at Madhu, as thou wast straighten- ing the arrow, with the bow stationed on thy lap. 
+(23.) I remember thy merry talk (lit. accompanied with Smiles) with, and casting a side-glance (lit. looking from the cornor of the eyes) at Madhu, as thou wast straightening the arrow, with the bow stationed on thy lap. 
 (24.) Where is thy friend, Madhu, the delight of thy heart, who shaped thy bow with flowers? Ör alas, can it be that he, too, is sent along the path taken by his friend by the Trident-holder whose wrath is dreadful? 
 (25.) Madhu, cut at heart by her cries of woe, as by venomed arrows, discovered himself in the front of the woestriken Kati to console her. 
 K. T. 3 
 ( 26 ) 
 (26.) On seeing him she wept bitterly and beat her bosom so as to oppress her breasts; misery breaks out as if opening her flood-gates in the presence of one's connections (a Kinsman or a friend). 
-(27.) Smitten with grief she thus said to him-Look, O Vasanta, what has remained of thy friend. These ashes, variegated like a pigeon, are blown about, particle by parti- cle, by the wind. 
+(27.) Smitten with grief she thus said to him-Look, O Vasanta, what has remained of thy friend. These ashes, variegated like a pigeon, are blown about, particle by particle, by the wind. 
 (28.) 
-Now reveal thyself to us, O Smara. This Màdha- va longs to behold thee; the love of men may be fickle to women, but it can not be so towards a friend. 
+Now reveal thyself to us, O Smara. This Màdhava longs to behold thee; the love of men may be fickle to women, but it can not be so towards a friend. 
 (29.) By this thy comrade (lit. one who is always by the side) the whole world, including the gods and the demons, is forced to own the empire of thy bow, the string of which is the lotus-fibre, and the arrows delicate flowers. 
 30 Gone is that friend of thine; he comes not back, as a lamp put out by the blast of wind; I am as it were the wick (of this lamp); behold me enveloped in the smoke of unbearable misery. 
 (31.) Fate, sparing me while killing Káma, has only done half the butchery; when the firm supporting tree is broken by an elephant the creeper (hanging by it) tends (is bound) to come down. 
 (32.) Therefore let this duty by a friend, which comes next, be done by thee; pray, send me, who am afflicted, to my husband, by consigning me to the funeral fire. 
 (33.) The moon-light passes away with the moon, and the lightning vanishes with the clouds; that a wife has to go by the way the husband has gone is thus admitted even by life-less things. 
 (34.) Besmearing my breasts with these ashes of the body of my beloved, I shall lay my body on the fire as if on a bed of young leaves. 
-(35.) O gentle one, thou hast many a time helped mak- ing up our bed of flowers; do thou now pile up a pyre quickly, urged to do so with a bow with joined palms. 
+(35.) O gentle one, thou hast many a time helped making up our bed of flowers; do thou now pile up a pyre quickly, urged to do so with a bow with joined palms. 
 (36.) After that, coax the fire set to me by fannings in the shape of the south winds that it should burn quickly; 
 ( 27 ) 
 it is indeed known to thee that Smara can not bear to live 
@@ -64,4 +64,4 @@ When Hara, made to look upon her with favour by her austerities, will lead Parva
 (43.) Thus did god Brahmâ, when begged by Dharma, deliver a speech setting forth a limit to Smara's curse: the self-restrained and the clouds are the sources of both. Ashani and Amrit lightning and water (curses and favours ;). 
 (44.) So, O sweet woman, preserve this body which will be reunited with thy husband: a river, the water of which is drunk up by the sun, is again joined with a fresh current in the rainy season. 
 (45.) Thus did some being of unseen form discourage Rati's idea of seeking her death, and through a belief in that the friend of the flower-weaponed god) (voice) spring (lit), consoled her with words (replete with good sense). 
-(46.) Then the wife of Madana lived, (thinned by her misery), awaiting the end of the calamity just as the cresc- ent of the moon appearing by day and looking pale through the loss of rays, awaits the (coming of the) evening. 
+(46.) Then the wife of Madana lived, (thinned by her misery), awaiting the end of the calamity just as the crescent of the moon appearing by day and looking pale through the loss of rays, awaits the (coming of the) evening. 
