--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -54,7 +54,7 @@ title = "०५ तपःफलोदयः"
 इयेषेति ॥ सा पार्वती समाधिमेकाग्रतामास्थायावलम्ब्यतपोभिर्वक्ष्यमाणनियमैः करणभूतैरात्मनः स्वस्याबन्ध्यरूपतां सफलसौन्दर्यं कर्तुमियेषेच्छति स्म । तपसा शिवं वशीकर्तुमुद्युक्तेत्यर्थः । अन्यथा ततोऽन्यप्रकारेण कथं वा तद्‌द्वयमवाप्यते । किं तद्द्वयम् ? तथाभूता विधा प्राकारो यस्य तत्तथाविधं प्रेम स्नेहः येनार्धाङ्गहरा हरस्य भवेदिति भावः । तादृशः पतिश्च । यो मृत्युंजय इति भावः । द्वयमेव खलु क्त्रीणामपेक्षितं यद्भर्तृवाल्लभ्यं जीवद्भर्तृकत्वं चेति । तच्च तपश्चर्यैकसाध्यमिति निश्चिकायेत्यर्थः । अत्र मनुः- 'यद् दुष्करं यद् दुरापं यद् दुर्गं यच्च दुस्तरम् । तत्सर्व तपसा प्राप्यं तपो हि दुरतिक्रमम् ॥' इति ॥ 5.2 ॥
 </details>
 
-### निषेध-प्रयासः
+### निषेध-प्रयासादि
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशम्य चैनां तपसे कृतोद्यमां  
@@ -252,7 +252,7 @@ title = "०५ तपःफलोदयः"
 तदेव **पूर्वं** प्रथमं यस्य तत्पूर्वं यथा तथा **निबद्धया** तया मौञ्ज्यास्या देव्या **रसनागुणस्यास्पदं** स्थानं जघनम् । सह रागेण **सरागं** सरोहितम् **अकारि** कृतम् । सौकुमार्यातिशयादिति भावः ॥ 5.10 ॥
 </details>
 
-<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
+<details><summary>नारायणः - प्रस्तावः</summary>
 
 कुशादानम् अक्षमालाधारणं चाह- 
 </details>
@@ -262,7 +262,7 @@ title = "०५ तपःफलोदयः"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विसृष्ट-रागाद् अधरान् **निवर्तितः** +++(- न खल्व् अधुना रागस्थापनम्)+++,  
-स्तनाङ्ग-रागारुणिताच् च, कन्दुकात् ।  
+स्तनाङ्ग-रागारुणिताच् च कन्दुकात् +++(तत्-क्षेप-क्रीडायाम्)+++ ।  
 कुशाङ्कुरादान-परिक्षताङ्गुलिः  
 **कृतो ऽक्ष-सूत्र-प्रणयी** तया करः ॥ 5.11 ॥  
 </details>
@@ -270,6 +270,30 @@ title = "०५ तपःफलोदयः"
 <details><summary>English</summary>
 
 (11.) By her hand, turned away from (no longer employed in painting) the nether lip from which the red colour bad disappeared, and from the ball becoming red by the anguent of the breasts, and with the fingers pricked by plucking the tender blades of Kus'a grass, was made the friend of the rosary of Akshas. 
+</details>
+
+<details><summary>अरुणगिरिनाथः</summary>
+
+निसृष्टेति । निसृष्टस्त्यक्तः रागो लाक्षादिः । कन्दुकस्य पतनसमये स्तनयोरुपरि स्थापितत्वादङ्गरागारुणितत्वम् । अत्र पर्यायः परिवृत्तितुल्यफलः ।। ११ ।। 
+</details>
+
+<details><summary>नारायणः</summary>
+
+निसृष्टेति । तया करः निसृष्टरागाद् अधरात्,  
+स्तनाङ्गरागारुणितात् कन्दुकाच्च निवर्तितः  
+कुशाङ्कुरादानपरिक्षताङ्गुलिः अक्षसूत्रप्रणयी कृतः ।  
+निसृष्टस् त्यक्तो रागो लाक्षादिर्यस्मात्।  
+इदं करनिवर्तने हेतुः ।  
+
+स्तनतटघटितैरङ्गरागैः कुङ्कुमाद्यनुलेपनैर् **अरुणिताद्** अरुणीकृतात् **कन्दुकाच्च** निवर्तितो वारितः ।  
+**कन्दुकस्य** पतन-समये स्तनयोर् उपरि स्थापितत्वात् तस्य तदङ्गरागारुणितत्वम् ।  
+एतच्च कन्दुक-सेवा-स्वभावाद् अवसेयम्।  
+कुशानां दर्भाणाम् अङ्कुराः कुशाङ्कुराः । 'अङ्कुरोऽभिनवोद्भिदी'त्यमरः ।  
+तेषां परिस्तरणाद्यर्थम् आदानेन  
+परिक्षताः परितः समन्तात् क्षता अङ्गुलयो  
+यस्य स तथा।  
+कुशानां क्रूर-स्पर्शत्वम् अङ्गुलि-परिक्षतौ हेतुः । अङ्कुरशब्दोपादानादत्यन्तक्रूरस्पर्शत्वं सूचितम् । अक्षसूत्रमक्षमाला । प्रणयः स्नेहः परिचयो वा । 'प्रणयः स्यात् परिचये याच्ञायां सौहृदेऽपि च' इति वैजयन्ती । अक्षसूत्रे प्रणयोऽस्यास्तीत्यक्षसूत्रप्रणयी। पार्वती तपस्समये निजकरमधररञ्जनकन्दुकाघातरूपात् कार्यद्वयान्निवार्य कुशाङ्कुरादानाक्षमालापरिवर्तनरूपकार्यद्वयपरमकरोदित्यर्थः । अत्रैकस्यैव करस्याधरादौ दर्भाङ्कुरादौ च क्रमेण वर्तनात् पर्यायोऽलङ्कारः । 'एकमनेकस्मिन्ननेकमेकस्मिन् वा क्रमेण पर्यायः' [अठं.स.] इति । फलतस्तु परिवृत्तिरेव पर्यायस्यात्र वैचित्र्यविशेषाभावात्।। ११ ।। 
+
 </details>
 
 
@@ -295,8 +319,14 @@ title = "०५ तपःफलोदयः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-महार्हशय्यापरिवर्तनच्युतैः स्वकेशपुष्पैरपि या स्म दूयते ।  
-अशेत सा बाहुलतोपधायिनी निषेदुषी स्थण्डिल एव केवले ॥ 5.12 ॥  
+महार्ह-शय्या-परिवर्तन-**च्युतैः** स्व-केश-पुष्पैर् अपि या **स्म** +++(मर्दनेन)+++ **दूयते** ।  
+**अशेत** सा बाहु-लतोपधायिनी +++(उपधानान्तरं विना!)+++  
+**निषेदुषी** स्थण्डिल+++(→भूमाव्)+++ एव केवले ॥ 5.12 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(12.) She, who would experience pain even by the flowers dropped down from her hair in her rollings on her costly bed, sat and lay down (now) on the bare earth-platform using her creeper-like arm as a pillow. 
 </details>
 
 <details><summary>मूलम्</summary>
@@ -312,14 +342,24 @@ title = "०५ तपःफलोदयः"
 
 <details><summary>मल्लिनाथः</summary>
 
-महार्हेति ॥ महानर्हो मूल्यं यस्याः सा महार्हा श्रेष्ठा या शय्या तस्यां परिवर्तनेन लुण्ठनेन च्युतैर्भ्रष्टैः स्वकेशपुष्पैरपि या देवी दूयते स्म विलश्यते स्म । पुष्पाधिकसाकुमार्यादिति भावः । सादेवी बाहुलतामुपधत्त उपधानीकरोतीति बाहुलतोपधायिती सती केवले संस्तरणरहिते स्थण्डिले भूमावेवाशेत शयितवती । तथा निषेदुष्युपविष्टा च । 'क्वसुश्च' इति क्वसुः । 'इगितश्च' इति ङीप् । भूमावेव शयनादिव्यवहारो न जातूपरीत्यर्थः ॥ 5.12 ॥
+महार्हेति ॥ महानर्हो मूल्यं यस्याः सा महार्हा श्रेष्ठा या शय्या तस्यां परिवर्तनेन लुण्ठनेन च्युतैर्भ्रष्टैः स्वकेशपुष्पैरपि या देवी दूयते स्म विलश्यते स्म । पुष्पाधिकसाकुमार्यादिति भावः । सादेवी बाहुलतामुपधत्त उपधानीकरोतीति बाहुलतोपधायिती सती केवले संस्तरणरहिते **स्थण्डिले** भूमाव् एवाशेत शयितवती । तथा निषेदुष्युपविष्टा च । 'क्वसुश्च' इति क्वसुः । 'इगितश्च' इति ङीप् । भूमावेव शयनादिव्यवहारो न जातूपरीत्यर्थः ॥ 5.12 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पुनर्ग्रहीतुं नियमस्थया तया द्वयेऽपि निक्षेप इवार्पितं द्वयम् ।  
-लतासु तन्वीषु विलासचेष्टितं विलोलदृष्टं हरिणाङ्गनासु च ॥ 5.13 ॥  
+पुनर् **ग्रहीतुं** नियम-स्थया तया  
+द्वयेऽपि निक्षेप **इवार्पितं** द्वयम् ।  
+लतासु तन्वीषु विलास-चेष्टितं  
+विलोल-दृष्टं हरिणाङ्गनासु च ॥ 5.13 ॥  +++(5)+++
 </details>
+
+<details><summary>English</summary>
+
+(13.) 
+By her who was under the vow, had been left as a deposit to be taken back, the two things with the two vẻ.... her sportive gestures with the slender creepers, and her 
+unsteady glances with the female deer. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -337,15 +377,27 @@ title = "०५ तपःफलोदयः"
 पुनरिति ॥ नियमस्थया व्रतस्थया तया देव्या द्वयेऽपि द्वयं पुनर्ग्रहीतुं निक्षेपोऽर्पितमिव निक्षेपत्वेनार्पितं किमु । क्वचित् । 'द्वयीषु' इति प्रामादिकः पाठः । कुत्र द्वये किं द्वयमर्पितमित्याह-तन्वीषु लतासु विलासएव चेष्टितं विलासचेष्टितं हरिणाङ्गनासु विलासदृष्टं चञ्चलावलोकितं च व्रतस्थायां तस्यां तयोरदर्शनाल्लतादिषु दर्शनाच्चार्पितमिवेत्युत्प्रेक्षा न तु वस्तुतोऽर्पणमस्तीति भावः ॥ 5.13 ॥
 </details>
 
+## वात्सल्यम्
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अतन्द्रिता सा स्वयमेव वृक्षकान्घटस्तनप्रस्त्रवणैर्व्यवर्घयत् ।  
-गुहोऽपि येषां प्रथमाप्तजन्मनां न पुत्रवात्सल्यमपाकरिष्यति ॥ 5.14 ॥  
+अ-तन्द्रिता सा स्वयम् एव वृक्षकान्  
+घट-+++(रूप-)+++स्तन-प्रस्रवणैर् **व्यवर्धयत्** ।  
+गुहो ऽपि येषां प्रथमाप्त-जन्मनां  
+न +++(मातुः)+++ पुत्र-वात्सल्यम् **अपाकरिष्यति** ॥ 5.14 ॥+++(5)+++  
 </details>
+
+<details><summary>English</summary>
+
+(14.) 
+Never slack in her care she personally rented up the saplings with outpourings from breast-like-jars-saplings, her motherly affection for which, being first-born, even Guha would not be able to set aside. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-अतन्द्रिता सा स्वयमेव वृक्षकान्घटस्तनप्रस्त्रवणैर्व्यवर्घयत् ।  
+अतन्द्रिता सा स्वयमेव वृक्षकान्घटस्तनप्रस्रवणैर्व्यवर्धयत् ।  
 गुहोऽपि येषां प्रथमाप्तजन्मनां न पुत्रवात्सल्यमपाकरिष्यति ॥ 5.14 ॥  
 </details>
 
@@ -361,14 +413,22 @@ title = "०५ तपःफलोदयः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अरण्यबीजाञ्जलिदानलालितास्तथा च तस्यां हरिणा विशश्वसुः ।  
-यथा तदीयैर्वयनैः कुतूहलात्पुरः सखीनाममिमीत लोचने ॥ 5.15 ॥  
+अरण्य-बीजाञ्जलि-दान-लालितास्  
+तथा च तस्यां हरिणा **विशश्वसुः** ।  
+यथा तदीयैर् नयनैः कुतूहलात्  
+पुरः सखीनाम् **अमिमीत** लोचने ॥ 5.15 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(15.) And the fawns, fondled by giving (them) handfuls of forest-grain, trusted her so far that she could measure" (the length of) her own eyes before her friends (or, of the eyes of her friends before her), by their eyes out of curiosity. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 अरण्यबीजाञ्जलिदानलालितास्तथा च तस्यां हरिणा विशश्वसुः ।  
-यथा तदीयैर्वयनैः कुतूहलात्पुरः सखीनाममिमीत लोचने ॥ 5.15 ॥  
+यथा तदीयैर्नयनैः कुतूहलात्पुरः सखीनाममिमीत लोचने ॥ 5.15 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -383,13 +443,20 @@ title = "०५ तपःफलोदयः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कृताभिषेकां हृतजातवेदसं त्वगुत्तरासङ्गवतीमधीतिनीम् ।  
-दिदृक्षवस्तामृषयोऽभ्युपागमन्न धर्मवृद्धेषु वयः समीक्ष्यते ॥ 5.16 ॥  
+कृताभिषेकां हुतजातवेदसं त्वग्-उत्तरासङ्गवतीम् अधीतिनीम् ।  
+दिदृक्षवस् ताम् ऋषयो **ऽभ्युपागमन्**  
+न धर्म-वृद्धेषु वयः **समीक्ष्यते** ॥ 5.16 ॥  +++(5)+++
 </details>
+
+<details><summary>English</summary>
+
+(16.) Sages came there, desirous of seeing her, who used to take a sacred bath, sacrificed to the fire, wore n bark as her upper garment and recited (sacred texts): age is no consideration in the case of those who are old in spiritual attainments. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-कृताभिषेकां हृतजातवेदसं त्वगुत्तरासङ्गवतीमधीतिनीम् ।  
+कृताभिषेकां हुतजातवेदसं त्वगुत्तरासङ्गवतीमधीतिनीम् ।  
 दिदृक्षवस्तामृषयोऽभ्युपागमन्न धर्मवृद्धेषु वयः समीक्ष्यते ॥ 5.16 ॥  
 </details>
 
